package dk.emilxaviervt._2025ice._2025ice.gameLogic;

public class Player {
}
