package dk.emilxaviervt._2025ice.gameLogic;

public class Adventure extends Thread{

//    DataBaseManager dm;
//    ClientFX clientFX;

@Override
public void run(){
            for(int i = 0; i < 100; i++){
                System.out.println(i);

                try {
                    Thread.sleep(1000);
                } catch (InterruptedException e) {
                    System.out.println("error");}
                }
            }

            private void combat(Creature creature){

            }

            public void singleRoll(){

            }

            public void doubleRoll(){

            }


        }




