package userLogic;

public class User {

}
