package userLogic;

public class UserManager {

}
